# pebex-wallet

./: .gitignore  .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake
src/: main.cpp
src/gui/ui/: aboutdialog.ui
